<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Time of last update: %s</string>
    <string name="slash">/</string>
    <string name="price">Price: </string>
    <string name="mini_price_label">Minimun in a day: </string>
    <string name="max_price_label">Maximun in a day: </string>
    <string name="last_deal">Last deal: </string>
</resources>